Text manipulation does not observe manipulated text after update https://bugs.webkit.org/show_bug.cgi?id=213318 <rdar://problem/63766703>

Patch by Sihui Liu <sihui_liu@appe.com> on 2020-07-13
Reviewed by Geoffrey Garen.

Source/WebCore:

Make TextManipulationController be aware of content replacement on Text and extract the new content.

Test: TextManipulation.CompleteTextManipulationForManipulatedTextWithNewContent

* dom/CharacterData.h:
* dom/Text.cpp:
(WebCore::Text::setDataAndUpdate):
* dom/Text.h:
* editing/TextManipulationController.cpp:
(WebCore::TextManipulationController::didCreateRendererForElement):
(WebCore::TextManipulationController::didUpdateContentForText):
(WebCore::TextManipulationController::scheduleObservationUpdate):
* editing/TextManipulationController.h:
* editing/markup.cpp:

Tools:

* TestWebKitAPI/Tests/WebKitCocoa/TextManipulation.mm:
(TestWebKitAPI::TEST):

Canonical link: https://commits.webkit.org/227070@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264305 268f45cc-cd09-0410-ab3c-d52691b4dbfc