Source/WebCore/editing/TextManipulationController.h
@@ -116,6 +116,7 @@ public:
     WEBCORE_EXPORT void startObservingParagraphs(ManipulationItemCallback&&, Vector<ExclusionRule>&& = { });
 
     void didCreateRendererForElement(Element&);
+    void didUpdateContentForText(Text&);
     void removeNode(Node*);
 
     enum class ManipulationFailureType : uint8_t {
@@ -179,6 +180,7 @@ private:
 
     WeakPtr<Document> m_document;
     WeakHashSet<Element> m_elementsWithNewRenderer;
+    HashSet<Text*> m_manipulatedTextsWithNewContent;
     HashSet<Node*> m_manipulatedNodes;
 
     HashMap<String, bool> m_cachedFontFamilyExclusionResults;
