Source/WebCore/editing/markup.cpp
@@ -74,6 +74,7 @@
 #include "SocketProvider.h"
 #include "StyleProperties.h"
 #include "TextIterator.h"
+#include "TextManipulationController.h"
 #include "VisibleSelection.h"
 #include "VisibleUnits.h"
 #include <wtf/StdLibExtras.h>
